# advent-of-code

./: Cargo.toml  main.sh
inputs/year2021/: day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.test.2  day14.txt
inputs/year2022/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt
macros/: Cargo.toml
macros/src/: lib.rs
python/: 2022-14.py  2022-15.py  2022-16.py
src/: lib.rs  main.rs  year2022day01.rs  year2022day02.rs  year2022day03.rs  year2022day04.rs  year2022day05.rs  year2022day06.rs  year2022day07.rs  year2022day08.rs  year2022day09.rs  year2022day10.rs  year2022day11.rs  year2022day12.rs  year2022day13.rs
src/year2015/day01/: mod.rs
src/year2021/day01/: mod.rs
src/year2021/day02/: mod.rs
src/year2021/day03/: mod.rs
src/year2021/day04/: mod.rs
src/year2021/day05/: mod.rs
src/year2021/day06/: mod.rs
src/year2021/day07/: mod.rs
src/year2021/day08/: mod.rs
src/year2021/day09/: mod.rs
src/year2021/day10/: mod.rs
src/year2021/day11/: mod.rs
src/year2021/day12/: mod.rs
src/year2021/day13/: mod.rs
src/year2021/day14/: mod.rs
src/year2022/day01/: mod.rs
src/year2022/day02/: mod.rs
src/year2022/day03/: mod.rs
src/year2022/day04/: mod.rs
src/year2022/day05/: mod.rs
src/year2022/day06/: mod.rs
src/year2022/day07/: mod.rs
src/year2022/day08/: mod.rs
src/year2022/day09/: mod.rs
src/year2022/day10/: mod.rs
(+1 files in other folders)
