[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Scoder12"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
test-case = "2.2.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2.3"
