[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["chcl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
macros = { path = "./macros"}
regex = "1"
test-case = "2.2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2.3"
once_cell = "1"
